complete basic backend and build admin pages

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,9 @@
 MONGODB_URI = "mongodb+srv://astrostar41ust:212546@cluster0.q4sievt.mongodb.net/e-commerce"
+JWT_SECRET="hash#secret"
+
+CLOUDINARY_CLOUD_NAME="dvubt8yuj"
+CLOUDINARY_API_KEY="346212349498227"
+CLOUDINARY_API_SECRET="hQ5F6KXBsQab_46oS-8VQ_HM48s"
+
+ADMIN_EMAIL = "admin@admin.com"
+ADMIN_PASSWORD = "admin"
